tests/baselines/reference/typeParameterAssignability2.errors.txt
==== tests/cases/conformance/types/typeRelationships/assignmentCompatibility/typeParameterAssignability2.ts (47 errors) ====
    // type parameters are not assignable to one another unless directly or indirectly constrained to one another
    
    function foo<T, U extends T>(t: T, u: U) {
                    ~~~~~~~~~~~
!!! error TS2313: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
        t = u; // error
        ~
!!! error TS2323: Type 'U' is not assignable to type 'T'.
        u = t; // ok
        ~
!!! error TS2323: Type 'T' is not assignable to type 'U'.
    }
    
    function foo2<T extends U, U>(t: T, u: U) {
                  ~~~~~~~~~~~
!!! error TS2313: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
        t = u; // error
        ~
!!! error TS2323: Type 'U' is not assignable to type 'T'.
        u = t; // ok
        ~
!!! error TS2323: Type 'T' is not assignable to type 'U'.
    }
    
    function foo3<T extends U, U extends V, V>(t: T, u: U, v: V) {
                  ~~~~~~~~~~~
!!! error TS2313: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                               ~~~~~~~~~~~
!!! error TS2313: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
        t = u; // error
        ~
!!! error TS2323: Type 'U' is not assignable to type 'T'.
        u = t;
        ~
!!! error TS2323: Type 'T' is not assignable to type 'U'.
    
        t = v; // error
        ~
!!! error TS2323: Type 'V' is not assignable to type 'T'.
        v = t; // ok
        ~
!!! error TS2323: Type 'T' is not assignable to type 'V'.
    
        u = v; // error
        ~
!!! error TS2323: Type 'V' is not assignable to type 'U'.
        v = u; // ok
        ~
!!! error TS2323: Type 'U' is not assignable to type 'V'.
    }
    
    function foo4<T extends U, U extends V, V extends Date>(t: T, u: U, v: V) {
                  ~~~~~~~~~~~
!!! error TS2313: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                               ~~~~~~~~~~~
!!! error TS2313: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
        t = u; // error
        ~
!!! error TS2323: Type 'U' is not assignable to type 'T'.
        t = v; // error
        ~
!!! error TS2323: Type 'V' is not assignable to type 'T'.
        t = new Date(); // error
        ~
!!! error TS2323: Type 'Date' is not assignable to type 'T'.
    
        u = t;
        ~
!!! error TS2323: Type 'T' is not assignable to type 'U'.
        u = v; // error
        ~
!!! error TS2323: Type 'V' is not assignable to type 'U'.
        u = new Date(); // error
        ~
!!! error TS2323: Type 'Date' is not assignable to type 'U'.
    
        v = t;
        ~
!!! error TS2323: Type 'T' is not assignable to type 'V'.
        v = u;
        ~
!!! error TS2323: Type 'U' is not assignable to type 'V'.
        v = new Date(); // ok
        ~
!!! error TS2323: Type 'Date' is not assignable to type 'V'.
    
        var d: Date;
        d = t; // ok
        ~
!!! error TS2323: Type 'T' is not assignable to type 'Date'.
        d = u; // ok
        ~
!!! error TS2323: Type 'U' is not assignable to type 'Date'.
        d = v; // ok
    }
    
    // same as foo4 with different type parameter ordering
    function foo5<V extends Date, U extends V, T extends U>(t: T, u: U, v: V) {
                                  ~~~~~~~~~~~
!!! error TS2313: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                                               ~~~~~~~~~~~
!!! error TS2313: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
        t = u; // error
        ~
!!! error TS2323: Type 'U' is not assignable to type 'T'.
        t = v; // error
        ~
!!! error TS2323: Type 'V' is not assignable to type 'T'.
        t = new Date(); // error
        ~
!!! error TS2323: Type 'Date' is not assignable to type 'T'.
    
        u = t;
        ~
!!! error TS2323: Type 'T' is not assignable to type 'U'.
        u = v; // error
        ~
!!! error TS2323: Type 'V' is not assignable to type 'U'.
        u = new Date(); // error
        ~
!!! error TS2323: Type 'Date' is not assignable to type 'U'.
    
        v = t;
        ~
!!! error TS2323: Type 'T' is not assignable to type 'V'.
        v = u;
        ~
!!! error TS2323: Type 'U' is not assignable to type 'V'.
        v = new Date(); // ok
        ~
!!! error TS2323: Type 'Date' is not assignable to type 'V'.
    
        var d: Date;
        d = t; // ok
        ~
!!! error TS2323: Type 'T' is not assignable to type 'Date'.
        d = u; // ok
        ~
!!! error TS2323: Type 'U' is not assignable to type 'Date'.
        d = v; // ok
    }
    
    function foo6<T extends U, U, V>(t: T, u: U, v: V) {
                  ~~~~~~~~~~~
!!! error TS2313: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
        t = u; // error
        ~
!!! error TS2323: Type 'U' is not assignable to type 'T'.
        t = v; // error
        ~
!!! error TS2323: Type 'V' is not assignable to type 'T'.
    
        u = t; // ok
        ~
!!! error TS2323: Type 'T' is not assignable to type 'U'.
        u = v; // error
        ~
!!! error TS2323: Type 'V' is not assignable to type 'U'.
    
        v = t; // error
        ~
!!! error TS2323: Type 'T' is not assignable to type 'V'.
        v = u; // error
        ~
!!! error TS2323: Type 'U' is not assignable to type 'V'.
    }